[package]
name = "fmp"
version = "1.2.24"
edition = "2024"
authors = ["Luke Wilkinson <wilkinsonluke@proton.me>"]
license = "GPL-3.0"
description = "Simple password manager"
repository = "https://github.com/TT1882/Forgot-My-Password.git"
keywords = ["cli", "crypto", "cryptography", "serde", "rust"]

[dependencies]
sha2 = "0.10.9"
dirs = "6.0.0"
serde_json = "1.0.137"
serde = { version = "1.0.137", features = ["derive"] }
input-handle = "1.0.4"
clap = { version = "4.5.37", features = ["derive"] }
rand = "0.9.0"
prettytable-rs = "0.10.0"
secrecy = "0.10.3"
tempfile = "3.5.0"
anyhow = "1.0.3"
aes-gcm = "0.10.0"
aes = "0.8.4"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
base64 = "0.22.1"
